--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,7 @@
 <section class="contact container">
   <h2 class="mt-4">Contact</h2>
   <p>Email: <a href="mailto:brian.ramirez6&#64;upr.edu">brian.ramirez6&#64;upr.edu</a></p>
-  <p>LinkedIn: <a href="https://linkedin.com/in/your-profile" target="_blank">linkedin.com/in/your-profile</a></p>
   <p>GitHub: <a href="https://github.com/Brian-E-Ramirez-Zea" target="_blank">github.com/Brian-E-Ramirez-Zea</a></p>
+  <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="brian-ramirez-zea-a27856230" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://pr.linkedin.com/in/brian-ramirez-zea-a27856230?trk=profile-badge">Brian Ramirez Zea</a></div>
+              
 </section>
