--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,28 @@
-<header class="container">
-  <h1>Brian Eduardo Ramirez Zea</h1>
-  <nav class="nav">
-    <a class="nav-link" routerLink="/">Home</a>
-    <a class="nav-link" routerLink="/about">About</a>
-    <a class="nav-link" routerLink="/experience">Experience</a>
-    <a class="nav-link" routerLink="/projects">Projects</a>
-    <a class="nav-link" routerLink="/contact">Contact</a>
-  </nav>
-</header>
-<main class="container">
-  <router-outlet></router-outlet>
-</main>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Brian's Resume</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/experience">Experience</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/projects">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/contact">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<router-outlet></router-outlet>
