--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,17 +6,24 @@
 }
 header h1 {
   text-align: center;
-  color: #333;
+  color: #ce0f0f;
 }
 section {
   margin: 20px 0;
 }
 h2 {
-  color: #444;
+  color: #0732b4;
   border-bottom: 1px solid #ccc;
   padding-bottom: 5px;
 }
 ul {
   list-style-type: disc;
   margin-left: 20px;
+}
+.navbar-nav .separator {
+  display: flex;
+  align-items: center;
+  padding: 0 0.5rem;
+  color: #888;
+  pointer-events: none;
 }
