--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,19 +5,23 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav" style="list-style: none; padding-left: 0;">
         <li class="nav-item">
           <a class="nav-link" routerLink="/">Home</a>
         </li>
+        <li class="nav-item separator">•</li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/about">About</a>
         </li>
+        <li class="nav-item separator">•</li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/experience">Experience</a>
         </li>
+        <li class="nav-item separator">•</li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/projects">Projects</a>
         </li>
+        <li class="nav-item separator">•</li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/contact">Contact</a>
         </li>
